k8s/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app: jellyfin
  # Using NodePort to access with IP Address
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: 8096
      nodePort: 30006
    - name: https
      protocol: TCP
      port: 8920
      targetPort: 8920
      nodePort: 30007
    - name: dlna-udp
      protocol: UDP
      port: 1900
      targetPort: 1900
      nodePort: 30008
    - name: discovery-udp
      protocol: UDP
      port: 7359
      targetPort: 7359
      nodePort: 30009
